--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+	 <li>Bike</li>
+	<li>Phone</li>
+	<li>House</li>
+	</ol>
+	<un>
+		<li>Bali</li>
+		<li>Maldives</li>
+		<li>U.K</li>
+	</un>
     <script type="text/javascript" src="./script.js">
 </script>
 
